Thu May 16 11:00:07 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W1047.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/syntax.rb : Fix bad expression-constancy check in
	  order to treat an expression derives an address-constant as a
	  constant-expression.

	* lib/adlint/cc1/interp.rb : Move runtime object manipulation interface
	  to InterpreterMediator.
	  Fix over-notification of implicit conversion in order not to check
	  the natural conversions suck as function to function-pointer
	  conversion.

	* lib/adlint/cc1/mediator.rb : Add convenient interface for
	  expression-constancy check and runtime object manipulations.
	* lib/adlint/cc1/expr.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check.rb : Ditto.

	* lib/adlint/cc1/enum.rb : Add enumerator name extraction interface for
	  expression-constancy check.

	* lib/adlint/cc1/object.rb : Move object conversion responsibilities
	  from Interpreter to TypedObject.
	  Add function name extraction interface for expression-constancy
	  check.

Mon May 13 19:19:31 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/eval.rb : Fix infinite-loop problem of preprocessor
	  when the #include directive appears with undefined macro.
	* lib/adlint/error.rb : Ditto.
	* etc/mesg.d/core/ja_JP/messages.yml : Ditto.
	* etc/mesg.d/core/en_US/messages.yml : Ditto.

Mon May 13 17:41:41 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/lexer.rb : Fix block comment handling in order not to
	  dive into nested part when a single slash character appears before
	  the comment terminator.

Mon May 13 16:29:47 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/lexer.rb : Fix bad handling of block comments in order
	  not to assume comment terminator as a part of comment content.

	* lib/adlint/cpp/eval.rb : Fix abend problem of preprocessor when a
	  block comment is not terminated in the translation-unit.
