@@ -190,6 +190,7 @@ features/code_check/W0251.feature
 features/code_check/W0252.feature
 features/code_check/W0253.feature
 features/code_check/W0254.feature
+features/code_check/W0422.feature
 features/code_check/W0425.feature
 features/code_check/W0431.feature
 features/code_check/W0432.feature
