@@ -561,8 +561,13 @@ module Cc1 #:nodoc:
       end
 
       if node.initializer
+        # NOTE: Define variable first in order to correctly evaluate
+        #       sizeof-expression that refers defining variable in the
+        #       initializer.
+        var = define_variable(node)
         init_var, init_conved = evaluate_initializer(node)
-        var = define_variable(node, init_conved.value.to_defined_value)
+        var.assign!(init_conved.value.to_defined_value)
+
         notify_variable_value_referred(node, init_var)
         notify_variable_defined(node, var)
         notify_variable_initialized(node, var, init_var)
